# agentic-ai

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
docs/module-01-context-aware-llm/: CHROMADB_QUICKSTART.md  README.md
docs/module-01-context-aware-llm/examples/: simple-context-chatbot.md  simple_context_chatbot.py
docs/module-01-context-aware-llm/exercises/: exercise-01-configuration-setup.md
docs/module-01-context-aware-llm/lectures/: 01-introduction-to-context-aware-llms.md  02-configuration-and-environment-setup.md
quickstart/: quickstart_chromadb.py
src/: configuration.py  graph.py  prompts.py  states.py  utils.py
src/database/: __init__.py  connection.py  models.py
src/graph/: __init__.py  base.py  factory.py  graph.py  utils.py  workflow.py
src/memory/: __init__.py  conversation_memory.py
src/nodes/: __init__.py
src/tools/: __init__.py
src/vectordb/: __init__.py  chroma_client.py
